[gd_scene load_steps=5 format=3 uid="uid://dn53f0oghdjow"]

[ext_resource type="Script" uid="uid://cdpccmv5hkto5" path="res://pantallas/menu_niveles/menu_niveles.gd" id="1_1vcou"]
[ext_resource type="PackedScene" uid="uid://sddk5xqkdc4t" path="res://ui/boton.tscn" id="1_3jpul"]
[ext_resource type="PackedScene" uid="uid://b4ctirjw1xq53" path="res://ui/titulo.tscn" id="1_o885e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kwq62"]
bg_color = Color(0.165656, 0.165657, 0.165655, 1)

[node name="MenuNiveles" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1vcou")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kwq62")

[node name="VolverBoton" parent="." instance=ExtResource("1_3jpul")]
layout_mode = 1
offset_left = 24.0
offset_top = 24.0
offset_right = 152.0
offset_bottom = 66.0
text = "Volver"

[node name="Titulo" parent="." instance=ExtResource("1_o885e")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -434.5
offset_top = 80.0
offset_right = 434.5
offset_bottom = 191.0
grow_horizontal = 2
text = "Niveles"

[node name="Nivel1Boton" parent="." instance=ExtResource("1_3jpul")]
layout_mode = 0
offset_left = 128.0
offset_top = 256.0
offset_right = 320.0
offset_bottom = 384.0
text = "Nivel 1"

[connection signal="pressed" from="VolverBoton" to="." method="_on_volver_boton_pressed"]
[connection signal="pressed" from="Nivel1Boton" to="." method="_on_nivel_1_boton_pressed"]
